--- a/indexStyling.css
+++ b/indexStyling.css
@@ -101,6 +101,7 @@ html{
 	background-color: white;
 	border: 2px solid royalblue;
 }
+/*sdv*/
 #about{
 	height: 600px;
 	width: 100vw;
@@ -115,6 +116,7 @@ html{
 	width: 40%;
 }
 .carrerobj
+
 {
 	width: 60%;
 	padding-top: 0px;
